more debugging, finally fix the bug that it 'randomly' crashes Discord, new setting to make mentions readable

--- a/style.scss
+++ b/style.scss
@@ -8,7 +8,7 @@
 }
 
 .rolecolors-mention:hover{
-    color: #fff;
+    color: var(--colorHover);
     background-color: var(--colorBgHover)
 }
 
